dev-header/add: added logo and tab buttons in header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
+            <div class="header-tabs">
+                <button class="tab-button">Hébergements</button>
+                <button class="tab-button">Activités</button>
+            </div>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
