dev-header/add: added style to header and its content, changed header css class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
-            <div class="header-tabs">
+            <div class="header-tabs-container">
                 <button class="tab-button">Hébergements</button>
                 <button class="tab-button">Activités</button>
             </div>
