dev-header/update: added style to the header, and active class for tabs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
             <div class="header-tabs-container">
-                <button class="tab-button">Hébergements</button>
+                <button class="tab-button active">Hébergements</button>
                 <button class="tab-button">Activités</button>
             </div>
         </header>
