dev-header/add: added footer with links to other pages

--- a/index.html
+++ b/index.html
@@ -95,7 +95,24 @@
                 </section>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-section">
+                <h4>À propos</h4>
+                <p><a href="#">Fonctionnement du site</a></p>
+                <p><a href="#">Conditions générales</a></p>
+                <p><a href="#">Données et confidentialités</a></p>
+            </div>
+            <div class="footer-section">
+                <h4>Nos hébergements</h4>
+                <p><a href="#">Charte qualité</a></p>
+                <p><a href="#">Proposer votre hôtel</a></p>
+            </div>            
+            <div class="footer-section">
+                <h4>Assistance</h4>
+                <p><a href="#">Centre d'aide</a></p>
+                <p><a href="#">Nous contacter</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 
