dev-search-sct/add: added HTML and CSS content for lodge search form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -24,6 +24,23 @@
             </div>
         </header>
         <main>
+            <div class="search-lodge-container">
+                <div>
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                </div>
+                <form id="search-lodge-form" action="#" method="get">
+                    <div class="icon-place-pin flex-centered height-100">
+                        <img src="images/icones/place-pin.svg" alt="Map pin place icon" width="14" height="18">
+                    </div>
+                    <div class="lodge-search-bar">
+                        <input type="text" name="lodge-search" id="lodge-form-input" class="flex-centered fs18">
+                        <button type="submit" class="height-100">
+                            <img src="images/icones/search-glass.svg" alt="" width="17" height="17">
+                        </button>
+                    </div>
+                </form>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
