dev-search-sct/add: added filters buttons

--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
                         </button>
                     </div>
                 </form>
+                
+                <div>
+                    <h2 class="fs18">Filtres</h2>
+                    <div class="filters-container">
+                        <button type="button" class="flex-centered">
+                            <img src="images/icones/filter-economic.svg" alt="Dollar bill icon" width="22">
+                            <span>Économique</span>
+                        </button>
+                        <button type="button" class="flex-centered">
+                            <img src="images/icones/filter-familial.svg" alt="Person icon" height="22">
+                            <span>Familial</span>
+                        </button>
+                        <button type="button" class="flex-centered">
+                            <img src="images/icones/filter-romantic.svg" alt="Heart icon" width="22">
+                            <span>Romantique</span>
+                        </button>
+                        <button type="button" class="flex-centered">
+                            <img src="images/icones/filter-trend.svg" alt="Flame icon" width="20">
+                            <span>Nos pépites</span>
+                        </button>
+                    </div>
+                </div>
             </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
