--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         </button>
                     </div>
                 </div>
+                <div class="search-form-tooltip flex-centered">
+                    <img src="images/icones/tooltip-icon.svg" alt="Tooltip information icon" width="24">
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
             </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
