dev-search-sct/update: edited filters container class name

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     </div>
                 </form>
                 
-                <div>
+                <div class="filters-container">
                     <h2 class="fs18">Filtres</h2>
-                    <div class="filters-container">
+                    <div class="filter-buttons-container">
                         <button type="button" class="flex-centered">
                             <img src="images/icones/filter-economic.svg" alt="Dollar bill icon" width="22">
                             <span>Économique</span>
