--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <div class="search-lodge-container">
-                <div>
+                <div class="page-title-container">
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
@@ -62,7 +62,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="search-form-tooltip flex-centered">
+                <div class="search-form-tooltip">
                     <img src="images/icones/tooltip-icon.svg" alt="Tooltip information icon" width="24">
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
