dev-search-sct/update: updated style for responsive

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     </div>
                     <div class="lodge-search-bar">
                         <input type="text" name="lodge-search" id="lodge-form-input" class="flex-centered fs18">
-                        <button type="submit" class="height-100">
+                        <button type="submit" class="flex-centered">
                             <img src="images/icones/search-glass.svg" alt="" width="17" height="17">
+                            <span>Rechercher</span>
                         </button>
                     </div>
                 </form>
