--- a/index.html
+++ b/index.html
@@ -257,6 +257,53 @@
                     </div>
                 </section>
             </div>
+            <section class="activites">
+                <div class="activites-title">
+                    <h3 class="section-title">Activités à Marseille</h3>
+                </div>
+                <div class="activites-cards">
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Image d'un port avec des bateaux et ville en fond">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h4 class="card-title">Vieux-port</h4>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Image d'un fort dans une colline">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h4 class="card-title">Fort de Pomègues</h4>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image d'une colline surplombant la mer">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h4 class="card-title">Parc national des Calanques</h4>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Image d'une ville et une église sur une colline">
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h4 class="card-title">Notre-Dame-de-la-Garde</h4>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+            </section>
         </main>
         <footer>
             <div class="footer-section">
