develop/edit: edited header buttons to be link elements

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header>
             <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
             <div class="header-tabs-container">
-                <button class="tab-button active">Hébergements</button>
-                <button class="tab-button">Activités</button>
+                <a class="tab-button active" href="#hebergements">Hébergements</a>
+                <a class="tab-button" href="#activites">Activités</a>
             </div>
         </header>
         <main>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section class="hebergements" id="hebergements">
                     <div class="hebergements-title">
                         <h3 class="section-title">Hébergements à Marseille</h3>
                     </div>
@@ -257,7 +257,7 @@
                     </div>
                 </section>
             </div>
-            <section class="activites">
+            <section class="activites" id="activites">
                 <div class="activites-title">
                     <h3 class="section-title">Activités à Marseille</h3>
                 </div>
