develop/update: css corrections and refactoring

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="main-container">
         <header>
             <img src="images/logo/Booki.png" alt="Booki logo" width="61" height="19">
-            <div class="header-tabs-container">
+            <nav class="header-tabs-container">
                 <a class="tab-button active" href="#hebergements">Hébergements</a>
                 <a class="tab-button" href="#activites">Activités</a>
-            </div>
+            </nav>
         </header>
         <main>
             <div class="search-lodge-container">
@@ -34,8 +34,8 @@
                         <img src="images/icones/place-pin.svg" alt="Map pin place icon" width="14" height="18">
                     </div>
                     <div class="lodge-search-bar">
-                        <input type="text" name="lodge-search" id="lodge-form-input" class="flex-centered fs18">
-                        <button type="submit" class="flex-centered">
+                        <input type="text" name="lodge-search" id="lodge-form-input" class="flex-centered fs18 bold">
+                        <button type="submit" class="flex-centered fs18 bold">
                             <img src="images/icones/search-glass.svg" alt="" width="17" height="17">
                             <span>Rechercher</span>
                         </button>
@@ -45,19 +45,19 @@
                 <div class="filters-container">
                     <h2 class="fs18">Filtres</h2>
                     <div class="filter-buttons-container">
-                        <button type="button" class="flex-centered">
+                        <button type="button" class="flex-centered bold">
                             <img src="images/icones/filter-economic.svg" alt="Dollar bill icon" width="22">
                             <span>Économique</span>
                         </button>
-                        <button type="button" class="flex-centered">
+                        <button type="button" class="flex-centered bold">
                             <img src="images/icones/filter-familial.svg" alt="Person icon" height="22">
                             <span>Familial</span>
                         </button>
-                        <button type="button" class="flex-centered">
+                        <button type="button" class="flex-centered bold">
                             <img src="images/icones/filter-romantic.svg" alt="Heart icon" width="22">
                             <span>Romantique</span>
                         </button>
-                        <button type="button" class="flex-centered">
+                        <button type="button" class="flex-centered bold">
                             <img src="images/icones/filter-trend.svg" alt="Flame icon" width="20">
                             <span>Nos pépites</span>
                         </button>
@@ -80,7 +80,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel du port</h4>
-                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 52<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -99,7 +99,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel Chez Amina</h4>
-                                        <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 96<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -118,7 +118,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel Les mouettes</h4>
-                                        <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 76<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -137,7 +137,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel de la mer</h4>
-                                        <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 46<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -156,7 +156,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Auberge La Canebière</h4>
-                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -175,7 +175,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Auberge Le Panier</h4>
-                                        <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 23<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -203,7 +203,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel Le soleil du matin</h4>
-                                        <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 128<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -222,7 +222,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Chambres d’hôtes Au cœur de l’eau</h4>
-                                        <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 71<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -241,7 +241,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h4 class="card-title">Hôtel Bleu et Blanc</h4>
-                                        <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 68<span class="bold">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -307,18 +307,18 @@
         </main>
         <footer>
             <div class="footer-section">
-                <h5>À propos</h5>
+                <h5 class="fs18">À propos</h5>
                 <p><a href="#">Fonctionnement du site</a></p>
                 <p><a href="#">Conditions générales</a></p>
                 <p><a href="#">Données et confidentialités</a></p>
             </div>
             <div class="footer-section">
-                <h5>Nos hébergements</h5>
+                <h5 class="fs18">Nos hébergements</h5>
                 <p><a href="#">Charte qualité</a></p>
                 <p><a href="#">Proposer votre hôtel</a></p>
             </div>            
             <div class="footer-section">
-                <h5>Assistance</h5>
+                <h5 class="fs18">Assistance</h5>
                 <p><a href="#">Centre d'aide</a></p>
                 <p><a href="#">Nous contacter</a></p>
             </div>
